--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "dev": "nodemon index.js",
     "dev-peer": "cross-env GENERATE_PEER_PORT='true' nodemon index.js"
   },
+  "jest": {
+    "testEnvironment": "node"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/hyu96/crytochain.git"
@@ -25,9 +28,11 @@
     "jest": "^23.6.0"
   },
   "dependencies": {
+    "elliptic": "^6.5.1",
     "express": "^4.16.3",
     "hex-to-binary": "^1.0.1",
     "redis": "^2.8.0",
-    "request": "^2.88.0"
+    "request": "^2.88.0",
+    "uuid": "^3.3.2"
   }
 }
